-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0, Lustre 2.15.6
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/04e77c61-78cc-47c8-b19b-c8f083816002
test_160a failed with the following error:
Registered 4 changelog users: 'cl1 cl1 cl1 cl1' CMD: onyx-136vm12 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.changelog_users mkdir: cannot create directory '/mnt/lustre/d160a.sanity/pics/2008': Protocol error sanity test_160a: @@@@@@ FAIL: mkdir parent '/mnt/lustre/d160a.sanity/pics/2008' failed
Test session details:
clients: https://build.whamcloud.com/job/lustre-b2_15/94 - 4.18.0-553.5.1.el8_10.x86_64
servers: https://build.whamcloud.com/job/lustre-master/4581 - 4.18.0-553.16.1.el8_lustre.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_160a - mkdir parent '/mnt/lustre/d160a.sanity/pics/2008' failed
- is duplicated by
-
LU-18342 interop: pjdfstest test_chmod_03: /usr/share/pjdfstest/chmod/03.t against lustre failed
-
- Resolved
-