LU-18343 lod: old client mkdir on wrong MDT

Old clients may not cache default LMV, and mkdir request may be sent
to wrong MDT, but MDT is too strict. Return -EREMOTE instead of
-EPROTO to let old clients retry.

Fixes: 6dbb4c6c8 ("LU-12998 lod: statfs upon nocreate check")
Test-Parameters: mdtcount=4 clientversion=2.15 testlist=sanity env=ONLY=160a
Signed-off-by: Lai Siyao <lai.siyao@whamcloud.com>
Change-Id: I2e64e2b3ccd3117de163f58d697191fab4d7be1c
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56731
Reviewed-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>